@@ -7,11 +7,11 @@
 Graphics::Penplotter::GcodeXY	GcodeXY.pm	1;"	p
 Graphics::Penplotter::GcodeXY::_LiangBarsky	GcodeXY.pm	2482;"	s
 Graphics::Penplotter::GcodeXY::_a2c	GcodeXY.pm	3085;"	s
-Graphics::Penplotter::GcodeXY::_addfastmove	GcodeXY.pm	4305;"	s
+Graphics::Penplotter::GcodeXY::_addfastmove	GcodeXY.pm	4306;"	s
 Graphics::Penplotter::GcodeXY::_addhsegmentpath	GcodeXY.pm	1925;"	s
-Graphics::Penplotter::GcodeXY::_addmove	GcodeXY.pm	4275;"	s
+Graphics::Penplotter::GcodeXY::_addmove	GcodeXY.pm	4276;"	s
 Graphics::Penplotter::GcodeXY::_addpath	GcodeXY.pm	1780;"	s
-Graphics::Penplotter::GcodeXY::_addslowmove	GcodeXY.pm	4298;"	s
+Graphics::Penplotter::GcodeXY::_addslowmove	GcodeXY.pm	4299;"	s
 Graphics::Penplotter::GcodeXY::_addtopage	GcodeXY.pm	2333;"	s
 Graphics::Penplotter::GcodeXY::_adjust	GcodeXY.pm	3909;"	s
 Graphics::Penplotter::GcodeXY::_approximate_unit_arc	GcodeXY.pm	3068;"	s
@@ -80,7 +80,7 @@ Graphics::Penplotter::GcodeXY::_pt_unitfied	GcodeXY.pm	1666;"	s
 Graphics::Penplotter::GcodeXY::_recbezier3	GcodeXY.pm	742;"	s
 Graphics::Penplotter::GcodeXY::_recbezier4	GcodeXY.pm	826;"	s
 Graphics::Penplotter::GcodeXY::_sameside	GcodeXY.pm	2155;"	s
-Graphics::Penplotter::GcodeXY::_setprevious	GcodeXY.pm	4312;"	s
+Graphics::Penplotter::GcodeXY::_setprevious	GcodeXY.pm	4313;"	s
 Graphics::Penplotter::GcodeXY::_sheetinfo	GcodeXY.pm	4035;"	s
 Graphics::Penplotter::GcodeXY::_slowmove	GcodeXY.pm	3933;"	s
 Graphics::Penplotter::GcodeXY::_starttag	GcodeXY.pm	2650;"	s
@@ -106,8 +106,8 @@ Graphics::Penplotter::GcodeXY::currentpoint	GcodeXY.pm	323;"	s
 Graphics::Penplotter::GcodeXY::curve	GcodeXY.pm	665;"	s
 Graphics::Penplotter::GcodeXY::curveto	GcodeXY.pm	694;"	s
 Graphics::Penplotter::GcodeXY::degrees	GcodeXY.pm	1066;"	s
-Graphics::Penplotter::GcodeXY::do_pendown	GcodeXY.pm	4261;"	s
-Graphics::Penplotter::GcodeXY::do_penup	GcodeXY.pm	4254;"	s
+Graphics::Penplotter::GcodeXY::do_pendown	GcodeXY.pm	4262;"	s
+Graphics::Penplotter::GcodeXY::do_penup	GcodeXY.pm	4255;"	s
 Graphics::Penplotter::GcodeXY::ellipse	GcodeXY.pm	1406;"	s
 Graphics::Penplotter::GcodeXY::exporteps	GcodeXY.pm	3145;"	s
 Graphics::Penplotter::GcodeXY::exportsvg	GcodeXY.pm	3271;"	s
@@ -131,7 +131,7 @@ Graphics::Penplotter::GcodeXY::polygon	GcodeXY.pm	423;"	s
 Graphics::Penplotter::GcodeXY::polygonC	GcodeXY.pm	448;"	s
 Graphics::Penplotter::GcodeXY::polygonR	GcodeXY.pm	472;"	s
 Graphics::Penplotter::GcodeXY::polygonround	GcodeXY.pm	496;"	s
-Graphics::Penplotter::GcodeXY::printcorner	GcodeXY.pm	4327;"	s
+Graphics::Penplotter::GcodeXY::printcorner	GcodeXY.pm	4328;"	s
 Graphics::Penplotter::GcodeXY::radians	GcodeXY.pm	1060;"	s
 Graphics::Penplotter::GcodeXY::rotate	GcodeXY.pm	1190;"	s
 Graphics::Penplotter::GcodeXY::scale	GcodeXY.pm	1261;"	s
@@ -148,14 +148,14 @@ Graphics::Penplotter::GcodeXY::stroketextfill	GcodeXY.pm	1616;"	s
 Graphics::Penplotter::GcodeXY::textwidth	GcodeXY.pm	1633;"	s
 Graphics::Penplotter::GcodeXY::translate	GcodeXY.pm	1232;"	s
 Graphics::Penplotter::GcodeXY::translateC	GcodeXY.pm	1247;"	s
-Graphics::Penplotter::GcodeXY::vpype_linesort	GcodeXY.pm	4353;"	s
+Graphics::Penplotter::GcodeXY::vpype_linesort	GcodeXY.pm	4354;"	s
 _LiangBarsky	GcodeXY.pm	2482;"	s
 _a2c	GcodeXY.pm	3085;"	s
-_addfastmove	GcodeXY.pm	4305;"	s
+_addfastmove	GcodeXY.pm	4306;"	s
 _addhsegmentpath	GcodeXY.pm	1925;"	s
-_addmove	GcodeXY.pm	4275;"	s
+_addmove	GcodeXY.pm	4276;"	s
 _addpath	GcodeXY.pm	1780;"	s
-_addslowmove	GcodeXY.pm	4298;"	s
+_addslowmove	GcodeXY.pm	4299;"	s
 _addtopage	GcodeXY.pm	2333;"	s
 _adjust	GcodeXY.pm	3909;"	s
 _approximate_unit_arc	GcodeXY.pm	3068;"	s
@@ -224,7 +224,7 @@ _pt_unitfied	GcodeXY.pm	1666;"	s
 _recbezier3	GcodeXY.pm	742;"	s
 _recbezier4	GcodeXY.pm	826;"	s
 _sameside	GcodeXY.pm	2155;"	s
-_setprevious	GcodeXY.pm	4312;"	s
+_setprevious	GcodeXY.pm	4313;"	s
 _sheetinfo	GcodeXY.pm	4035;"	s
 _slowmove	GcodeXY.pm	3933;"	s
 _starttag	GcodeXY.pm	2650;"	s
@@ -250,8 +250,8 @@ currentpoint	GcodeXY.pm	323;"	s
 curve	GcodeXY.pm	665;"	s
 curveto	GcodeXY.pm	694;"	s
 degrees	GcodeXY.pm	1066;"	s
-do_pendown	GcodeXY.pm	4261;"	s
-do_penup	GcodeXY.pm	4254;"	s
+do_pendown	GcodeXY.pm	4262;"	s
+do_penup	GcodeXY.pm	4255;"	s
 ellipse	GcodeXY.pm	1406;"	s
 exporteps	GcodeXY.pm	3145;"	s
 exportsvg	GcodeXY.pm	3271;"	s
@@ -275,7 +275,7 @@ polygon	GcodeXY.pm	423;"	s
 polygonC	GcodeXY.pm	448;"	s
 polygonR	GcodeXY.pm	472;"	s
 polygonround	GcodeXY.pm	496;"	s
-printcorner	GcodeXY.pm	4327;"	s
+printcorner	GcodeXY.pm	4328;"	s
 radians	GcodeXY.pm	1060;"	s
 rotate	GcodeXY.pm	1190;"	s
 scale	GcodeXY.pm	1261;"	s
@@ -292,4 +292,4 @@ stroketextfill	GcodeXY.pm	1616;"	s
 textwidth	GcodeXY.pm	1633;"	s
 translate	GcodeXY.pm	1232;"	s
 translateC	GcodeXY.pm	1247;"	s
-vpype_linesort	GcodeXY.pm	4353;"	s
+vpype_linesort	GcodeXY.pm	4354;"	s
