@@ -1,7 +1,12 @@
 Revision history for Perl extension Graphics-Penplotter-GcodeXY
 
 {{$NEXT}}
-
+    - added stroke() before splitting
+    - clean up postscript output
+    - added gcodetoeps script
+    - added svgtogcode script
+    - cleanup externals with perlimport
+    - added gcodebb script
 v0.5.17 2025-10-14T15:12:44Z
     - bug fixes
 
